# esp32x_project_hal_components

./: .gitignore
WLAN/: CMakeLists.txt  network_info.c  smartconfig.c  smartconfig_monitor.c
ec11/: CMakeLists.txt  ec11.c  ec11.h  rotary.c
flexible_button/: CMakeLists.txt  flexible_button.h
humidity_sensor/: CMakeLists.txt  humidity_sensor.c  humidity_sensor.h
smartconfig/: smartconfig.c  smartconfig.h  smartconfig_monitor.c  smartconfig_monitor.h
uc1638/: CMakeLists.txt  uc1638.c  uc1638.h
